# merge-pr-in-all

./: CREDITS  Cargo.toml  Dockerfile  README.md
.github/workflows/: actionlint.yml  ci.yml
assets/: get_pull_requests_query.graphql
src/: main.rs
