[package]
name = "merge-pr-in-all"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["env", "derive"] }
graphql_client = { version = "0.14.0", features = ["reqwest", "reqwest-rustls"] }
octocrab = "0.43.0"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
