[package]
name = "merge-pr-in-all"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["form"] }
clap = { version = "4.5.31", features = ["env", "derive"] }
graphql_client = { version = "0.15.0" }
octocrab = "0.48.0"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
