[package]
name = "merge-pr-in-all"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.1", features = ["form"] }
clap = { version = "4.5.31", features = ["env", "derive"] }
graphql_client = { version = "0.16.0" }
octocrab = "0.52.0"
once_cell = "1.20.3"
reqwest = { version = "0.13.0", features = ["json"] }
rustls = "0.23.37"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
